[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "python-ocpi"
version = "0.3.2"
description = "Python library for the Open Charge Point Interface (OCPI)"
authors = [
  { name = "Florian Maurer", email = "maurer@fh-aachen.de"},
]
license = {text = "MIT"}
readme = "README.md"

keywords = ["ev", "charging", "OpenAPI", "Swagger", "REST"]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

dependencies = [
    "flask >= 2.1.2",
    "flask-restx >= 1.0.3",
]

[project.optional-dependencies]
dev = [
    "black >= 22.8.0",
    "isort >= 5.10.1",
    "mypy  >= 0.971",
]

[project.urls]
homepage = "https://github.com/NOWUM/pyocpi"
repository = "https://github.com/NOWUM/pyocpi"

[tool.setuptools]
packages = {find = {}}

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]

[tool.pytest]
testpaths = "tests"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# output
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true